--- a/css/phone.css
+++ b/css/phone.css
@@ -13,7 +13,7 @@ font-family: 'Julius Sans One',
     Very Dark Gray: #1a1a1a;
     Dark Gray:      #282828;
     Gray:           #505050;
-    Linen White:    #f2f2f2;
+    Linen White:    #f2f2f2
 
 /*============================*/
 /*========COLUMNS========*/
@@ -393,7 +393,7 @@ h3 {
 /*========YOUTUBE========*/
 
 .youtube_cover {
-    background-image: url(../img/YouTube/cover_art_xsm.jpg);
+    background-image: url(../img/youtube/cover_art_xsm.jpg);
     background-repeat: no-repeat;
     background-position: bottom;
 }
@@ -433,7 +433,7 @@ footer img {
 
 @media only screen and (min-width: 500px) {
     .youtube_cover {
-        background-image: url(../img/YouTube/cover_art_sm.jpg);
+        background-image: url(../img/youtube/cover_art_sm.jpg);
         background-position: top center;
     }
 }
